--- a/Photodiodes_Inspector/project/MDK_V5/objects/Photodiodes_Inspector.build_log.htm
+++ b/Photodiodes_Inspector/project/MDK_V5/objects/Photodiodes_Inspector.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.38.0.0
 Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Vladislav Rodionov, RTU MIREA, LIC=----
+License Information: V R, K, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.38.0.0
-Toolchain Path:  D:\Programs\Keil_uVision\ARM\ARMCLANG\bin\
+Toolchain Path:  X:\Programs\Keil uVision\ARM\ARMCLANG\Bin
 C Compiler:      ArmClang.exe V6.19
 Assembler:       Armasm.exe V6.19
 Linker/Locator:  ArmLink.exe V6.19
@@ -21,15 +21,29 @@ Target DLL:      Segger\JL2CM3.dll V2.99.42.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Microcontrollers\Photodiodes_inspector\Photodiodes_Inspector\project\MDK_V5\Photodiodes_Inspector.uvprojx
+X:\Projects\Photodiodes_inspector\Photodiodes_Inspector\project\MDK_V5\Photodiodes_Inspector.uvprojx
 Project File Date:  01/10/2024
 
 <h2>Output:</h2>
-*** Target 'Photodiodes_Inspector' uses ARM-Compiler 'Default Compiler Version 5' which is not available.
-*** Please review the installed ARM Compiler Versions:
-   'Manage Project Items - Folders/Extensions' to manage ARM Compiler Versions.
-   'Options for Target - Target' to select an ARM Compiler Version for the target.
-*** Build aborted.
+*** Using Compiler 'V6.19', folder: 'X:\Programs\Keil uVision\ARM\ARMCLANG\Bin'
+Build target 'Photodiodes_Inspector'
+compiling main.c...
+linking...
+Program Size: Code=4232 RO-data=420 RW-data=44 ZI-data=1644  
+FromELF: creating hex file...
+".\objects\Photodiodes_Inspector.axf" - 0 Error(s), 0 Warning(s).
+
+<h2>Software Packages used:</h2>
+
+Package Vendor: ArteryTek
+                
+                ArteryTek.AT32F403A_407_DFP.2.1.7
+                ArteryTek AT32F403A_407 Series Device Support,Drivers
+
+<h2>Collection of Component include folders:</h2>
+  X:/Programs/Keil uVision Packs/ArteryTek/AT32F403A_407_DFP/2.1.7/Device/Include
+
+<h2>Collection of Component Files used:</h2>
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
